# dock-plugin-uwu

./: .gitignore  Cargo.toml  README.md  REAMDE.md
src/: lib.rs  style.css
uwuifier/: Cargo.toml  uwuifier.h
uwuifier/src/: lib.rs
vala/: build.sh  dock_plugin_uwu-0.1.gir  dock_plugin_uwu.css  dock_plugin_uwu.h  dock_plugin_uwu.vala  dock_plugin_uwu.vapi  libuwuifier.h  libuwuifier.vapi  uwuifier.h
