[package]
name = "cosmic-dock-plugin-uwu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmic-plugin = { git = "https://github.com/wash2/dock-plugin" }
gtk4 = "0.4.5"
gtk4-sys = "0.4.5"
gdk-pixbuf = "0.15.1"
cascade = "1.0.0"
uwuify = "0.2.2"
once_cell = "1.9.0"

[build-dependencies]
cbindgen = "0.20.0"

[lib]
name = "uwu_plugin"
crate-type = ["cdylib"]
